# landing-page

./: .gitignore  AGENTS.md  Dockerfile  makefile  pyproject.toml
.github/workflows/: deploy.yml
frontend/: .gitignore  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: normalize-internal-links.mjs
frontend/src/: App.tsx  content.config.ts  index.css
frontend/src/components/: ExamplesIndex.astro  Header.astro  Icon.astro  PageOutline.astro  Sidebar.astro
frontend/src/layouts/: DocLayout.astro  LandingLayout.astro
frontend/src/pages/: [...slug].astro  docs.astro  index.astro
frontend/src/rehype/: gitbook-links.ts
frontend/src/remark/: gitbook-assets.ts  gitbook-columns.ts  gitbook-embed.ts  gitbook-hint.ts  gitbook-links.ts  gitbook-split-paragraphs.ts
frontend/src/styles/: gitbook.css  landing.css  prose.css  reset.css
frontend/src/utils/: base.ts  summary.ts
src/landing_page/: __init__.py
src/landing_page/static/: index.html
src/landing_page/static/_astro/: _slug_.COMOeaTV.css
src/landing_page/static/assets/: index-Ba2lCRjP.js  index-D2UGlBj6.css
src/landing_page/static/docs/: index.html
src/landing_page/static/docs/about/: index.html
src/landing_page/static/docs/api-reference/: index.html
src/landing_page/static/examples/: index.html
src/landing_page/static/privacy-policy/: index.html
src/landing_page/static/security/: index.html
src/landing_page/static/software-as-a-service-agreement/: index.html
src/landing_page/static/website-privacy-policy/: index.html
(+38 files in other folders)
