[tool.poetry]
name = "landing_page"
version = "0.1.0"
description = "Burla landing page service."
authors = ["Jacob Zuliani <jake@burla.dev>"]
packages = [{include = "landing_page", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
